--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,10 @@
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.5.3",
+    "openai": "^4.10.0",
     "socket.io": "^4.7.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
