--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.14",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
